# sff

./: CMakeLists.txt  README.md
process/p1/: main.c
process/p2/: main.c
src/: argument_manager.c  argument_manager.h  daemon_manager.c  daemon_manager.h  main.c  process_manager.c  process_manager.h  server_manager.c  server_manager.h  string_switch.h
